<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fitness Band</string>
    <string name="action_settings">Settings</string>
    <string name="Rssi">RSSI</string>
    <string name="rssiValue">---</string>
    <string name="digitalOut">Digital Out</string>
    <string name="digitalIn">Digital In</string>
    <string name="Pin">Pin</string>
    <string name="pinValue4">[ 2 ]</string>
    <string name="pinValue5">[ A4 ]</string>
    <string name="pinValue6">[ 3 ]</string>
    <string name="pinValue7">[ 5 ]</string>
    <string name="pinValueA5">[ A5 ]</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="PWM">PWM</string>
    <string name="Servo">Servo</string>
    <string name="AnalogIn">Analog In</string>
    <string name="AIText">----</string>
    <string name="connect">Connect</string>
    <string name="connecting">connecting.....</string>
    <string name="loading">Refreshing......</string>
    <string name="title_activity_select_login">SelectLoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook">facebook</string>
    <string name="toast_auth_success">auth success</string>
    <string name="toast_auth_failed">auth failed</string>
    <string name="toast_auth_canceled">auth canceled</string>
    <string name="app_id">497906953566757</string>
    <string name="title_activity_main_tabs">MainTabsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bleconnect">BLEConnectActivity</string>
    <string name="error_device_address">Error device.</string>
    <string name="scanning">Scanning......</string>
    <string name="connect_device">Connect device</string>
    <string name="couldnot_search_ble_device">Could not search ble device.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="day_string_of_user_login">Use in %1$s</string>
    <string name="cycle1_text">Continuous Accomplised Times</string>
    <string name="cycle2_text">High Score</string>
    <string name="cycle3_text">Goal Accomplised Times</string>
    <string name="friends">Friends</string>
    <string name="light_sport">light activity</string>
    <string name="right_sport">right activity</string>
    <string name="overdose_sport">overdose activity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="activity">Activity</string>
    <string name="now_use">Start</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="OK">OK</string>
    <string name="activity_record">Activity Record</string>
    <string name="sleep_record">Sleep Record</string>

    <!-- Activity Activity strings -->
    <string name="no_activity_tips">Now do not have any activity, please go to "settings" try connect Fitness Band.</string>
    <string name="activity_steps_goal">Goal&#160;</string>
    <string name="activity_step">&#160;Paces</string>
    <string name="activity_steps_finished">Finished&#160;</string>
    <string name="n_km_activity_distance">&#160;Km</string>
    <string name="n_calorie_activity">&#160;Calorie</string>
    <string name="not_sync">Have not sync.</string>
    <string name="last_sync_time_just_now">Sync now.</string>
    <string name="last_sync_time_string">Sync </string>
    <string name="mooth_ago">%1$s mouths ago</string>
    <string name="day_ago">%1$s days ago</string>
    <string name="week_ago">%1$s weeks ago</string>
    <string name="hour_ago">%1$s hours ago</string>
    <string name="minute_ago">%1$s minutes ago</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <!-- Sleep Activity strings -->
    <string name="sleep_deep">Deep Sleep</string>
    <string name="sleep_shallow">Shallow Sleep</string>
    <string name="sleep_no">No Sleep</string>
    <string name="sleep_total">Total time</string>
    <string name="sleep_wake_times">Wake times</string>
    <string name="sleep_wake_times_unit">times</string>
    <string name="n_hour_sleep_goal">%1$s hour sleep goal</string>
    <string name="sleep_good">Sleep good</string>
    <string name="sleep_normal">Sleep normal</string>
    <string name="sleep_bad">Sleep bad</string>

    <!-- Settings Activitys strings -->

    <string name="hour">H</string>
    <string name="minute">M</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="title_activity_photo_selector">PhotoSelectorActivity</string>
	
    <!-- RegisterUserInfoActivity strings -->
    <string name="profile_picture">Profile picture</string>
    <string name="select_picture">Select picture</string>
    <string name="take_picture">Take a picture</string>
    <string name="can_not_find_sd_card">Can\'t find sd card, save photo failed.</string>
</resources>