<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_user_info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_forgot_password"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_user_info_day_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/day_string_of_user_login" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_user_info_cycle1"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:background="@drawable/cycle1"
            android:gravity="center"
            android:text="@string/cycle1_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_user_info_cycle2"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:background="@drawable/cycle2"
            android:gravity="center"
            android:text="@string/cycle2_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_user_info_cycle3"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:background="@drawable/cycle3"
            android:gravity="center"
            android:text="@string/cycle3_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/add_friend" />
    </RelativeLayout>

</LinearLayout>